fix color contrast for search recordset button

--- a/public/client/less/recordset.less
+++ b/public/client/less/recordset.less
@@ -37,13 +37,12 @@ body{
         color: white;
         margin:30px 10px;
         padding: 6px 6px;
-        background-color: #488431;
+        background-color: #50813D;
         border:none;
         box-shadow: @shadow2;
         &:hover{
             transition: box-shadow .5s, background-color .5s, transform .5s;
             box-shadow: @shadow3;
-            background-color: #3f742b;
         }
     }
 
